DASH-15 DASH-16 DASH-17 DASH-18 DASH-19 DASH-67 Added initial work on saving info about blocking categories of items and items from particular contexts.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312947 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/OptionsPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/OptionsPage.html
@@ -6,6 +6,19 @@
 	
 	<p>place holder for the option page</p>
 	
+	<h4>Calendar</h4>
+	<ul>
+		<li>Hidden sites and hidden entity-types within sites</li>
+		<li>Hidden entity-types</li>
+		<li>Hidden items</li>
+	</ul>
+	
+	<h4>News</h4>
+	<ul>
+		<li>Hidden sites and hidden entity-types within sites</li>
+		<li>Hidden entity-types</li>
+		<li>Hidden items</li>
+	</ul>
 	
 </wicket:extend>
 </body>
