--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -234,7 +234,7 @@
                     <table class="listHeader" cellpadding="0" cellspacing="0" border="0">
                         <tr>
                             <td style="width:70%">
-                                <h3 class="withNav">News</h3>
+                                <h3 class="withNav">Recent Activity</h3>
                             </td>
                             <td style="width:5%">
                                 <span class="toggle">Toggle</span>
