--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -66,6 +66,7 @@
                                 <span wicket:id="calendarDate">[Date]</span>
                                 <span wicket:id="calendarTime">[Time]</span>
                                 <span wicket:id="itemType" class="itemType" style="display:none;">[item type]</span>
+                                <span wicket:id="itemCount" class="itemCount" style="display:none;">[item count]</span>
                                 <span wicket:id="entityReference" class="entityReference" style="display:none;">[entity reference]</span>
                             </td>
                             <td class="tab two">
@@ -126,6 +127,7 @@
                                 <span wicket:id="expiredCalendarDate">[Date]</span>
                                 <span wicket:id="expiredCalendarTime">[Time]</span>
                                 <span wicket:id="expiredCalendarItemType" class="itemType" style="display:none;">[item type]</span>
+                                <span wicket:id="itemCount" class="itemCount" style="display:none;">[item count]</span>
                                 <span wicket:id="expiredCalendarEntityReference" class="entityReference" style="display:none;">[entity reference]</span>
                             </td>
                             <td class="tab two">
@@ -177,6 +179,7 @@
                                 <span wicket:id="savedCalendarDate">[Date]</span>
                                 <span wicket:id="savedCalendarTime">[Time]</span>
                                 <span wicket:id="savedCalendarItemType" class="itemType" style="display:none;">[item type]</span>
+                                <span wicket:id="itemCount" class="itemCount" style="display:none;">[item count]</span>
                                 <span wicket:id="savedCalendarEntityReference" class="entityReference" style="display:none;">[entity reference]</span>
                             </td>
                             <td class="tab two">
@@ -217,6 +220,7 @@
                                 <span wicket:id="hiddenCalendarDate">[Date]</span>
                                 <span wicket:id="hiddenCalendarTime">[Time]</span>
                                 <span wicket:id="hiddenCalendarItemType" class="itemType" style="display:none;">[item type]</span>
+                                <span wicket:id="itemCount" class="itemCount" style="display:none;">[item count]</span>
                                 <span wicket:id="hiddenCalendarEntityReference" class="entityReference" style="display:none;">[entity reference]</span>
                             </td>
                             <td class="tab two">
@@ -265,6 +269,7 @@
                         <tr class="alt newsItem" id="item11" wicket:id="newsItems">
                             <td class="one">
                                 <span wicket:id="itemType" class="itemType" style="display:none;">[item type]</span>
+                                <span wicket:id="itemCount" class="itemCount" style="display:none;">[item count]</span>
                                 <span wicket:id="entityReference" class="entityReference" style="display:none;">[entity reference]</span>
                             </td>
                             <td class="two date">
@@ -336,6 +341,7 @@
                         <tr class="alt newsItem" id="item11" wicket:id="savedNewsItems">
                             <td class="one">
                                 <span wicket:id="itemType" class="itemType" style="display:none;">[item type]</span>
+                                <span wicket:id="itemCount" class="itemCount" style="display:none;">[item count]</span>
                                 <span wicket:id="entityReference" class="entityReference" style="display:none;">[entity reference]</span>
                             </td>
                             <td class="two date">
@@ -376,6 +382,7 @@
                         <tr class="alt newsItem" id="item11" wicket:id="hiddenNewsItems">
                             <td class="one">
                                 <span wicket:id="itemType" class="itemType" style="display:none;">[item type]</span>
+                                <span wicket:id="itemCount" class="itemCount" style="display:none;">[item count]</span>
                                 <span wicket:id="entityReference" class="entityReference" style="display:none;">[entity reference]</span>
                             </td>
                             <td class="two date">
