DASH-95 Attempting to rerender calendar section or news section on clicking a tab.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312993 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -34,10 +34,10 @@
                             <td style="width:70%">
                                <h3 class="withNav">Calendar</h3>
 			                   <ul>
-			                    	<li><a href="#" wicket:id="upcomingCalendarLink">Upcoming</a></li>
-			                    	<li><a href="#" wicket:id="pastCalendarLink">Past</a></li>
-			                    	<li><a href="#" wicket:id="starredCalendarLink">Starred</a></li>
-			                    	<li><a href="#" wicket:id="hiddenCalendarLink">Hidden</a></li>
+			                    	<li wicket:id="upcomingCalendarTab"><a href="#" wicket:id="link"><span wicket:id="label">[ Upcoming ]</span></a></li>
+			                    	<li wicket:id="pastCalendarTab"><a href="#" wicket:id="link"><span wicket:id="label">[ Past ]</span></a></li>
+			                    	<li wicket:id="starredCalendarTab"><a href="#" wicket:id="link"><span wicket:id="label">[ Starred ]</span></a></li>
+			                    	<li wicket:id="hiddenCalendarTab"><a href="#" wicket:id="link"><span wicket:id="label">[ Hidden ]</span></a></li>
 			                   </ul>
                             </td>
                             <td style="width:5%">
@@ -112,9 +112,9 @@
                             <td style="width:70%">
                                <h3 class="withNav">Recent Activity</h3>
 			                   <ul>
-			                    	<li><a href="#" wicket:id="currentNewsLink">Current Stuff</a></li>
-			                    	<li><a href="#" wicket:id="starredNewsLink">Starred</a></li>
-			                    	<li><a href="#" wicket:id="hiddenNewsLink">Hidden</a></li>
+			                    	<li wicket:id="currentNewsTab"><a href="#" wicket:id="link"><span wicket:id="label">[ Current ]</span></a></li>
+			                    	<li wicket:id="starredNewsTab"><a href="#" wicket:id="link"><span wicket:id="label">[ Starred ]</span></a></li>
+			                    	<li wicket:id="hiddenNewsTab"><a href="#" wicket:id="link"><span wicket:id="label">[ Hidden ]</span></a></li>
 			                   </ul>
                             </td>
                             <td style="width:5%">
