--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -5,6 +5,7 @@
     <body>
         <wicket:extend>
             <div class="portletBody">
+            	<div wicket:id="dashboard-page">
                 <link rel="stylesheet" type="text/css" href="/library/js/jquery/ui/1.8.4/css/ui-lightness/jquery-ui-1.8.4.full.css" />
                 <script type="text/javascript" src="/library/js/jquery/1.4.2/jquery-1.4.2.min.js">
                 </script>
@@ -206,6 +207,7 @@
                 <div wicket:id="callbackUrl" class="callBackUrl skip">
                     [callback url]
                 </div>
+            </div>
             </div>
         </wicket:extend>
     </body>
